--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "babel src -d dist -w",
-    "build": "babel src -d dist",
+    "lint": "eslint src/** --fix",
+    "build": "npm run lint && babel src -d dist",
     "start": "npm run build && node dist"
   },
   "dependencies": {
@@ -28,6 +29,15 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.3.3"
+    "babel-eslint": "^7.2.2",
+    "babel-preset-env": "^1.3.3",
+    "eslint": "^3.19.0",
+    "eslint-config-node": "^1.6.0",
+    "eslint-config-promise": "^1.1.3",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
