--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "babel src -d dist -w",
     "lint": "eslint src/** --fix",
+    "privacy": "git update-index --assume-unchanged db.privacy.json",
     "build": "npm run lint && babel src -d dist",
     "start": "npm run build && node dist"
   },
