--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "mysql": "^2.13.0",
+    "progress": "^2.0.0",
     "request": "^2.81.0",
     "sequelize": "^3.30.4"
   },
